--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div class="top-bar">
-        <div class="logo">So Fresh and So Clean... </div>
+        <div class="logo">Thanks for stopping by! .........We are still under construction! </div> </div>
         
       <div class="menu">
           <ul>
@@ -58,14 +58,14 @@
         </div>
   </div>
   <div class="wrapper">
-    <a name="form1867435595" id="formAnchor1867435595"></a>
+    <!-- <a name="form1867435595" id="formAnchor1867435595"></a>
     <script src="https://fs10.formsite.com/include/form/embedManager.js?1867435595"></script>
     <script>
     EmbedManager.embed({
       key: "https://fs10.formsite.com/res/showFormEmbed?EParam=B6fiTn-RcO5zRe9pQCi9yGrYe2Y6sJfY&1867435595",
       width: "100%"
     });
-    </script>
+    </script> -->
 
     <!-- <div class="payment">
       <div class="payment-logo">
