--- a/index.html
+++ b/index.html
@@ -59,26 +59,16 @@
   <!-- Gallery -->
   <section class="section-c">
     <div class="gallery">
-
-      
-        <a href="https://venmo.com/" target="blank">
-          <class="big"><img src="img/onionbackground.jpg" alt=""
-      /></a>
-      <a href="*" class="big"
-        ><img src="img/salsa2.jpg" alt=""
-      /></a>
-      <a href="*" class="big"
-        ><img src="img/New_Price_list.jpg" alt=""
-      /></a>
-      <a href="*" class="big"
-        ><img src="img/pickup_days.jpg" alt=""
-      /></a>
-      <a href="*" class="big">
+         <a><img src="img/onionbackground.jpg" alt="" />a>
+        <a><img src="img/salsa2.jpg" alt=""/></a>
+      <a><img src="img/pickup_days.jpg" alt=""/></a>
+      <a><img src="img/New_Price_list.jpg" alt=""/></a>
+      <!-- <a href="*" class="big">
         <img src="img/tomatoes.jpg" alt=""
-      /></a>
-      <a href="*" class="big"
+      /></a> -->
+      <!-- <a href="*" class="big"
         ><img src="img/pepper.jpg" alt=""
-      /></a>
+      /></a> -->
     </div>
   </section>
 
