--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- Gallery -->
   <section class="section-c">
     <div class="gallery">
-      <div><img src="img/salsa2.jpg" alt=""/></div>
+      <div class="image"><img src="img/salsa2.jpg" alt="fresh salsa"/></div>
       <div>
         <h1>Ready to place an order?</h1><br>
         <ul class="grid-list">
@@ -51,16 +51,17 @@
 <li>PICK UP days are Tuesday & Friday</li>
 <li>PICK UP HOURS: 1:30 - 5:30 p.m.</li>
 <li>NO REFUNDS FOR SALSA NOT PICKED UP</li>
-<li>In</li><br>
-<li>dfd</li>
-<li>df</li>
-<li>sdf</li>
-<li>dfd</li>
-<li>dfs</li>
+<li>.</li><br>
+<li>.</li>
+<li>.</li>
+<li>.</li>
+<li>.</li>
+<li>.</li>
         </ul>  
       </div>
-      <div>
+      <div class="image">
         <h1>8 oz</h1>
+        <img src="img/8oz.jpg" alt="container of salsa"/>   
         <form action="https://secure.networkmerchants.com/cart/cart.php" method="POST">
           Quantity <input type="text" size="6" name="product_quantity_1" /> 
           HEAT LEVEL <select name="product_option_1_1">
@@ -79,7 +80,7 @@
           <input type="hidden" name="hash" value="product_option_values_1_1|action|product_sku_1|product_description_1|product_amount_1|19c11c0f505b4a6609224b035c61600a" />
           <input type="submit" name="submit" value="Add to Cart" />
           </form> 
-          <img src="img/8oz.jpg" alt=""/>                       
+                              
       </div>
       <div>
         <h1>16 oz</h1>
