--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/simple-lightbox.scss">
     <script src="https://kit.fontawesome.com/97d0fe30e6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
-    
+    <link rel="stylesheet" href="grid-gallery.css" media="all">
     <title>72 Salsa</title>
 </head>
 <body>
@@ -38,10 +38,12 @@
   <!-- Large Text -->
   <section id="about" class="section-b"></section>
 
+
   <!-- Gallery -->
   <section class="section-c">
     <div class="gallery">
-      <div class="image"><img src="img/salsa2.jpg" alt="fresh salsa"/></div>
+      <div class="image">
+        <img src="img/salsa2.jpg" alt="fresh salsa" style="width: 100%;"/></div>
       <div>
         <h1>Ready to place an order?</h1><br>
         <ul class="grid-list">
@@ -61,7 +63,6 @@
       </div>
       <div class="image">
         <h1>8 oz</h1>
-        <img src="img/8oz.jpg" alt="container of salsa"/>   
         <form action="https://secure.networkmerchants.com/cart/cart.php" method="POST">
           Quantity <input type="text" size="6" name="product_quantity_1" /> 
           HEAT LEVEL <select name="product_option_1_1">
@@ -129,12 +130,51 @@
     </div>
   </section>
   <!-- Footer -->
-  <footer class="section-footer">
-    <div class="footer-container">
-      <div> <h2>Follow me for the lastest pop-up locations and promotions!</h2><a href="https://www.instagram.com/72salsa/" target="blank"><i class="fab fa-instagram fa-2x"></i></a>
-        <a href="http://facebook.com/72Salsa" target="blank"><i class="fab fa-facebook fa-2x"></i></a></div>
-          <div><a href="terms.html" target="blank">Terms and Conditions</a><br><a href="privacy.html" target="blank">Privacy Policy</a><br><h5>&copy;2020 Reyna Perez Designs</h5></div>
+  <footer class="section-footer py-4 bg-primary">
+    <div class="container">
+      <div>
+        <h2 class="text-2 mb-1">Follow for latest Pop-Up Locations!</h2>
+        <a href="https://www.facebook.com/72Salsa" target="blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/72salsa/" target="blank"><i class="fab fa-instagram"></i></a>
+        <h3>&copy;2020 Reyna Perez Designs</h3>
       </div>
+      <div>
+        <h3>Company Info</h3>
+        <ul>
+          <li><a href="#">All Products</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="privacy.html" target="blank">Privacy Policy</a></li>
+          <li><a href="terms.html" target="blank">Terms and Conditions</a></li>
+        </ul>
+      </div>
+     
+      <div>
+        <h3>Contact Us</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+        <form
+          class="mt-1"
+          name="email-form"
+          method="POST"
+          data-netlify="true"
+        >
+          <div class="email-form">
+            <span class="form-control-wrap"
+              ><input
+                type="email"
+                name="email"
+                id="email"
+                size="40"
+                class="form-control"
+                placeholder="E-mail"/></span
+            ><button type="submit" value="Submit" class="form-control submit">
+              <i class="fas fa-chevron-right"></i>
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
   </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="js/simple-lightbox.js"></script>
@@ -143,4 +183,6 @@ $(function() {
   const $gallery = $('.gallery a').simpleLighbox();
 })
 </script>
+</div>
+</body>
   </html>
