--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <section class="section-c">
     <div class="gallery">
       <div class="image">
-        <img src="img/salsa2.jpg" alt="fresh salsa" style="width: 100%;"/></div>
+        <img src="img/salsa2.jpg" alt="fresh salsa"/></div>
       <div>
         <h1>Ready to place an order?</h1><br>
         <ul class="grid-list">
@@ -52,7 +52,7 @@
 <li> Monday & Thursday</li>
 <li>PICK UP days are Tuesday & Friday</li>
 <li>PICK UP HOURS: 1:30 - 5:30 p.m.</li>
-<li>NO REFUNDS FOR SALSA NOT PICKED UP</li>
+<li>NO REFUNDS FOR SALSA NOT PICKED UP</li> 
         </ul>  
       </div>
       <div class="image">
