--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         </ul>  
       </div>
       <div class="image">
-        <h1>8 oz</h1>
+        <br><h1>8 oz</h1><br><br>
         <form action="https://secure.networkmerchants.com/cart/cart.php" method="POST">
-          Quantity <input type="text" size="6" name="product_quantity_1" /> 
-          HEAT LEVEL <select name="product_option_1_1">
+          Quantity <input type="text" size="6" name="product_quantity_1" /> <br>
+          HEAT LEVEL <select name="product_option_1_1"><br>
           <option value="MILD">MILD</option>
           <option value="MEDIUM">MEDIUM</option>
           <option value="HOT">HOT</option>
@@ -72,16 +72,16 @@
           <input type="hidden" name="product_amount_1" value="5.00" />
           <input type="hidden" name="language" value="en" />
           <input type="hidden" name="customer_receipt" value="true" />
-          <input type="hidden" name="hash" value="product_option_values_1_1|action|product_sku_1|product_description_1|product_amount_1|19c11c0f505b4a6609224b035c61600a" />
+          <input type="hidden" name="hash" value="product_option_values_1_1|action|product_sku_1|product_description_1|product_amount_1|19c11c0f505b4a6609224b035c61600a" /><br>
           <input type="submit" name="submit" value="Add to Cart" />
           </form> 
                               
       </div>
       <div>
-        <h1>16 oz</h1>
+        <br><h1>16 oz</h1><br>
         <form action="https://secure.networkmerchants.com/cart/cart.php" method="POST">
-          Quantity <input type="text" size="6" name="product_quantity_1" /> 
-          HEAT LEVEL <select name="product_option_1_1">
+          Quantity <input type="text" size="6" name="product_quantity_1" /> <br>
+          HEAT LEVEL <select name="product_option_1_1"><br>
           <option value="MILD">MILD</option>
           <option value="MEDIUM">MEDIUM</option>
           <option value="HOT">HOT</option>
@@ -94,15 +94,15 @@
           <input type="hidden" name="product_amount_1" value="8.00" />
           <input type="hidden" name="language" value="en" />
           <input type="hidden" name="customer_receipt" value="true" />
-          <input type="hidden" name="hash" value="product_option_values_1_1|action|product_sku_1|product_description_1|product_amount_1|c6e2dd30349790fb887650c2790a8334" />
+          <input type="hidden" name="hash" value="product_option_values_1_1|action|product_sku_1|product_description_1|product_amount_1|c6e2dd30349790fb887650c2790a8334" /><br>
           <input type="submit" name="submit" value="Add to Cart" />
           </form>                                       
       </div>
       <div>
-        <h1>3 - 16 oz for $20!</h1>
+        <br><h1>3 - 16 oz for $20!</h1><br><br>
         <form action="https://secure.networkmerchants.com/cart/cart.php" method="POST">
-          Quantity <input type="text" size="6" name="product_quantity_1" /> 
-          HEAT LEVEL <select name="product_option_1_1">
+          Quantity <input type="text" size="6" name="product_quantity_1" /> <br>
+          HEAT LEVEL <select name="product_option_1_1"><br>
           <option value="MILD">MILD</option>
           <option value="MEDIUM">MEDIUM</option>
           <option value="HOT">HOT</option>
@@ -115,7 +115,7 @@
           <input type="hidden" name="product_amount_1" value="20.00" />
           <input type="hidden" name="language" value="en" />
           <input type="hidden" name="customer_receipt" value="true" />
-          <input type="hidden" name="hash" value="product_option_values_1_1|action|product_sku_1|product_description_1|product_amount_1|481eb337e1db71e7990589b8de52fb7d" />
+          <input type="hidden" name="hash" value="product_option_values_1_1|action|product_sku_1|product_description_1|product_amount_1|481eb337e1db71e7990589b8de52fb7d" /><br>
           <input type="submit" name="submit" value="Add to Cart" />
           </form>                      
         </div>
