--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </ul>
       </div>
       <div class="image">
-        <br><h1>8 oz</h1><br><br>
+        <br><br><h1>8 oz</h1><br><br>
         <form action="https://secure.networkmerchants.com/cart/cart.php" method="POST">
           Quantity <input type="text" size="6" name="product_quantity_1" /><br> 
           HEAT LEVEL <select name="product_option_1_1"><br>
@@ -81,7 +81,7 @@
                               
       </div>
       <div>
-        <br><h1>16 oz</h1><br>
+        <br><br><h1>16 oz</h1><br>
         <form action="https://secure.networkmerchants.com/cart/cart.php" method="POST">
           Quantity <input type="text" size="6" name="product_quantity_1" /> <br>
           HEAT LEVEL <select name="product_option_1_1"><br>
@@ -107,7 +107,7 @@
       </div>
       
       <div>
-        <br><h1>3 - 16 oz for $20!</h1><br><br>
+        <br><br><h1>3 - 16 oz for $20!</h1><br><br>
         <form action="https://secure.networkmerchants.com/cart/cart.php" method="POST">
           Quantity <input type="text" size="6" name="product_quantity_1" /> <br>
           HEAT LEVEL <select name="product_option_1_1"><br>
